@@ -9,7 +9,7 @@ Bug fixing is an on-going task, so it is implied in all sub-releases.
 
 1. Bugzilla problem reports fixed:
 
-    44590, 44936, 44966, 45112, 45114, 45117
+    44590, 44919, 44936, 44966, 45112, 45114, 45117
 
 2. New features
 
@@ -22,6 +22,8 @@ Bug fixing is an on-going task, so it is implied in all sub-releases.
     properties of the DocumentType object are filled in).
   * Dynamically created <script> elements inserted into the document are
     now executed (at most once, as with HTML).
+  * The location bar in Squiggle is now updated if the requested document
+    followed an HTTP redirect.
 
 4. Bug fixes
 
